--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <br></br>
           <br></br>
 
-          <p>To protect our customers from sub-standard products we encourage them to  <a href="https://api.whatsapp.com/send?phone= <a href="https://api.whatsapp.com/send?phone=254726847866">WHATSAPP </a>Gadafi directly </p>
+          <p>To protect our customers from sub-standard products we encourage them to  <a href="https://api.whatsapp.com/send?phone=254726847866">WHATSAPP </a>Gadafi directly </p>
 	      
 	      <p>we do our free delivaries within</p>
 	      <ul>
